# testing

./: .dockerignore  .gitignore  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: github-actions-demo.yml
docker/: Dockerfile
docs/: d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_main_py.html  d_fed30406b832b6c4___init___py.html  d_fed30406b832b6c4_main_py.html  d_fed30406b832b6c4_run_py.html  index.html  status.json
docs/coverage/: coverage.xml  d_fed30406b832b6c4___init___py.html  d_fed30406b832b6c4_main_py.html  index.html  status.json
docs/test/: junit.xml
hello_world/: __main__.py  main.py
hello_world/database/: main.py  models.py  setting.py
public/test/: report.html
tests/: .env  conftest.py  test_db.py  test_main.py
