[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["Taek-Lee00 <dlrlxor548@gmai.com>"]
readme = "README.md"
packages = [{include = "hello_world"}]
repository= "https://github.com/Taek-Lee00/testing"

#main dependency group
[tool.poetry.dependencies]
python = ">=3.10, <3.12"

#webframework
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"


[tool.poetry.group.dev.dependencies]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclue = '''
/(
    \.git
| \.mypy_cache
| \.venv
| __pycache__\
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true
extend_skip = ["migrations", ".gitignore"]
